--- a/app/views/shared/_header-signin-form_new.slim
+++ b/app/views/shared/_header-signin-form_new.slim
@@ -3,19 +3,19 @@
     .signin-section1
       span.signin-text =t'sign_in.email'
       br
-      = text_field_tag 'user[email]', '', :class => "signin-field"
+      = text_field_tag 'user[email]', '', :class => "signin-field", :tabindex => 1
       br
       .floatleft
-        = check_box_tag 'user[remember_me]'
+        = check_box_tag 'user[remember_me]', :tabindex => 4
 
-      .signin-whitetext  =t'sign_in.remember_user'
+      .signin-lighttext  =t'sign_in.remember_user'
 
     .signin-section2
       span.signin-text =t'sign_in.password'
       br
-      = password_field_tag 'user[password]', '', :class => "signin-field"
+      = password_field_tag 'user[password]', '', :class => "signin-field", :tabindex => 2
       br
-      a.signin-whitetext  href="/users/password/new" =t'sign_in.forgot_password'
+      a.signin-lighttext  href="/users/password/new" =t'sign_in.forgot_password', :tabindex => 5
 
-    input.pretty-button.signin-button type="submit" value=t'sign_in.sign_in'
+    input.pretty-button.signin-button type="submit" value=t'sign_in.sign_in' tabindex="3"
 
