--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -140,9 +140,10 @@ body {
 }
 .signin-section1 {
 	float:left;
-	width:130px;
+	//width:130px;
 	margin-top:2px;
 	margin-left:13px;
+	margin-right:8px;
 }
 
 .signin-section1 input { 
@@ -151,25 +152,26 @@ body {
 }
 
 .signin-text {
-	font-size:11px;
-	text-transform:uppercase;
+	font-size:12px;
+	//text-transform:uppercase;
 	text-align:left;
-	text-shadow:1px 1px 1px #ffd366;
+	//text-shadow:1px 1px 1px #ffd366;
 }
 .signin-field {
-	background:url(../images/new_design/textfield-bg.png);
-	width:120px;
+	//background:url(../images/new_design/textfield-bg.png);
+	width:145px;
 	height:21px;
 	border:none;
-	padding-left:5px;
-	color:#ffba00;
+	//padding-left:5px;
+	//color:#ffba00;
 }
-.signin-whitetext {
+.signin-lighttext {
 	font-size:11px;
-	text-transform:uppercase;
+	//text-transform:uppercase;
 	text-align:left;
-	text-shadow:1px 1px 1px #d88202;
-	color:#f0f0f2;
+	//text-shadow:1px 1px 1px #d88202;
+	//color:#f0f0f2;
+	color:#333;
 	float:left;
 	margin-top:2px;
 }
@@ -184,7 +186,6 @@ body {
 }
 .signin-section2 {
 	float:left;
-	width:130px;
 	margin-top:2px;
 	margin-left:5px;
 }
@@ -192,7 +193,7 @@ body {
 	border: none;
 	float:left;
 	line-height:10px;
-	margin:18px 12px 0 4px;
+	margin:18px 12px 0 10px;
 }
 .menumain {
 	float:left;
@@ -295,6 +296,7 @@ body {
     margin-left:30px;
 }
 .read-more{
+	max-width: 220px;
     margin: 10px 0 0 10px;
     cursor: pointer;
 }
@@ -334,7 +336,7 @@ body {
 }
 .content-image {
 	float:left;
-	width:247px;
+	//width:247px;
 	height:286px;
 	margin-top:25px;
 }
@@ -348,11 +350,12 @@ body {
 }
 .content-list {
 	float:left;
-	width:250px;
+	//width: 250px;
+	max-width:330px;
 	margin-left:50px;
 	margin-top:25px;
 	font-size:14px;
-	text-transform:uppercase;
+	//text-transform:uppercase;
 }
 .blue-text {
 	color:#038be6;
