--- a/public/stylesheets/sass/builder.scss
+++ b/public/stylesheets/sass/builder.scss
@@ -555,14 +555,19 @@ div.wysiwyg ul.toolbar {
 #builder .edit-area.category, #builder .edit-area.page_tree {
 
   .controls {
-    height: 66px;
+    height: 28px;
     border: 1px solid #b3b3b3;
     padding: 3px;
     background: rgb(192, 192, 192);
+  }
+
+  .controls.category {
+    height: 66px; 
     hr {
       margin-top: 31px;
     }
   }
+
   .controls .button {
     height: 22px;
     padding: 6px 2px 0 22px;
@@ -573,13 +578,18 @@ div.wysiwyg ul.toolbar {
     cursor: pointer;
     &:empty { padding-left: 24px; background-position: 50% 50%; }
   }
+
   .controls .button:hover {
     border: 1px outset rgb(224, 224, 224);
   }
   
   .button.back { 
-    background-image: url(/images/ui/back-btn.png);
     height: 58px;
+    background-image: url(/images/ui/back-btn.png);
+  }
+
+  .button.back.page { 
+    height: 22px;
   }
 
   .button-separator {
@@ -593,6 +603,19 @@ div.wysiwyg ul.toolbar {
 
   .button-separator.back {
     height: 60px;
+  }
+
+  .button-separator.back.page {
+    height: 22px;
+  }
+
+  .row-separator {
+    height: 0px;
+    border: 1px;
+    border-style: inset;
+    margin: 3px 0px;
+    width: 324px;
+    float: left;  
   }
 
   .button.add-cat {
