--- a/public/stylesheets/sass/site-manager.scss
+++ b/public/stylesheets/sass/site-manager.scss
@@ -31,7 +31,7 @@ h2.active-site {
 
 .site-list-wrap {
   float: left;
-  width: 360px;
+  width: 320px;
   margin: 20px 20px 0px 20px;
   ul.sites {
     height:400px;
@@ -58,7 +58,7 @@ h2.active-site {
 
 .accordian {
   float: left;
-  width: 540px;
+  width: 625px;
   padding: 10px;
   border-left: 1px solid $light-border;
 
@@ -84,6 +84,7 @@ h2.active-site {
     overflow: hidden;
     clear: both;
     margin-bottom: 20px;
+    .error { margin-top: 10px; }
   }
 
   .signup-keys {
@@ -94,7 +95,7 @@ h2.active-site {
     overflow: auto;
     margin-top: 10px;
     margin-bottom: 6px;
-    width: 500px;
+    width: 585px;
     img {
       max-width: 50px;
       vertical-align: middle
@@ -112,3 +113,5 @@ form#account-setup-box.dialog.submitting {
     display: block;
   }
 }
+
+.error { color: #800; }
