--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -140,7 +140,7 @@ body {
 }
 .signin-section1 {
 	float:left;
-	//width:130px;
+	/* width:130px; */
 	margin-top:2px;
 	margin-left:13px;
 	margin-right:8px;
@@ -153,24 +153,24 @@ body {
 
 .signin-text {
 	font-size:12px;
-	//text-transform:uppercase;
+	/* text-transform:uppercase; */
 	text-align:left;
-	//text-shadow:1px 1px 1px #ffd366;
+	/* text-shadow:1px 1px 1px #ffd366; */
 }
 .signin-field {
-	//background:url(../images/new_design/textfield-bg.png);
+	/* background:url(../images/new_design/textfield-bg.png); */
 	width:145px;
 	height:21px;
 	border:none;
-	//padding-left:5px;
-	//color:#ffba00;
+	/* padding-left:5px; */
+	/* color:#ffba00; */
 }
 .signin-lighttext {
 	font-size:11px;
-	//text-transform:uppercase;
+	/*ntext-transform:uppercase; */
 	text-align:left;
-	//text-shadow:1px 1px 1px #d88202;
-	//color:#f0f0f2;
+	/* text-shadow:1px 1px 1px #d88202; */
+	/* color:#f0f0f2; */
 	color:#333;
 	float:left;
 	margin-top:2px;
@@ -336,7 +336,7 @@ body {
 }
 .content-image {
 	float:left;
-	//width:247px;
+	/* width:247px; */
 	height:286px;
 	margin-top:25px;
 }
@@ -350,12 +350,12 @@ body {
 }
 .content-list {
 	float:left;
-	//width: 250px;
+	/* width: 250px; */
 	max-width:330px;
 	margin-left:50px;
 	margin-top:25px;
 	font-size:14px;
-	//text-transform:uppercase;
+	/* text-transform:uppercase; */
 }
 .blue-text {
 	color:#038be6;
