--- a/public/stylesheets/sass/builder.scss
+++ b/public/stylesheets/sass/builder.scss
@@ -658,7 +658,7 @@ div.wysiwyg ul.toolbar {
       background: transparent 50% 50% no-repeat;
     }
     .name {
-      padding: 6px 10px 6px 3px;
+      margin: 6px 0px 6px 3px;
       float: left;
       width: 260px;
       overflow: hidden;
