Replaced back arrow image with character in builder.scss and adjusted css to accommodate change

--- a/app/views/builder/_templates.slim
+++ b/app/views/builder/_templates.slim
@@ -556,7 +556,7 @@ script.category-edit-area.menu-edit-area.services-edit-area.products-edit-area.p
 
     .controls.category
       / For icon-only buttons, you need = ""
-      .button.back title=t'builder.widget_editor.go_back_icon' = ""
+      .button.back title=t'builder.widget_editor.go_back_icon' &#0139;
       .button-separator.back
       .button.add-cat =t('builder.widget_editor.add_item', :item => "{{ catLabel }}")
       .button.add-item =t('builder.widget_editor.add_item', :item => "{{ itemLabel }}")
@@ -585,7 +585,7 @@ script.category-edit-area.menu-edit-area.services-edit-area.products-edit-area.p
 
     | <% } else { %>
     .controls
-      .button.back.page title=t'builder.widget_editor.go_back_icon' = ""
+      .button.back.page title=t'builder.widget_editor.go_back_icon' &#0139;
       .button-separator.back.page
       .crumb-wrap
         erb:
