--- a/public/stylesheets/sass/app.scss
+++ b/public/stylesheets/sass/app.scss
@@ -67,6 +67,14 @@ button[type=button] {
 
 input[type=checkbox] {
   margin-left: 0px;
+  vertical-align: top;
+}
+
+.opt-in-select {
+  label { 
+    margin-bottom: 6px; 
+    max-width: 90%; 
+  }
 }
 
 .explanation {
