--- a/public/stylesheets/sass/builder.scss
+++ b/public/stylesheets/sass/builder.scss
@@ -514,10 +514,10 @@ div.wysiwyg ul.toolbar {
       padding-left: 5px;
       label {
         float: left;
-        width: 24px;
-        margin-top: 4px;
+        margin: 2px 4px 0px 4px;
         color: #7e7e7e;
-        text-align: center; }
+        text-align: center;
+      }
       .t1 {
         display: none;
         clear: left;
