Updated sign_up link , fixed error in welcome_email, fixed spacing in es.yml

--- a/app/views/devise/shared/_links.erb
+++ b/app/views/devise/shared/_links.erb
@@ -3,7 +3,7 @@
 <% end -%>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <%= link_to t('sign_up.sign_up'),root_path %><br />
+  <%= link_to t('sign_up.sign_up'),'/users/sign_up' %><br />
 <% end -%>
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' %>
