--- a/app/views/user_mailer/send_welcome_email.html.erb
+++ b/app/views/user_mailer/send_welcome_email.html.erb
@@ -9,10 +9,10 @@
 <%==t('account.welcome_email.mobile_redirect')%>
 <br />
 <br />
-<a href="http://www.sharethis.com/share?publisher=780260b0-560d-4d66-b09d-ebf049f3edb5&title=Check%20out%20my%20YoMobi%20mobile%20site.&url=<%= URI.encode @mobile_url %>"><%==t('account.welcome_email.share')%></a>.
+<a href="http://www.sharethis.com/share?publisher=780260b0-560d-4d66-b09d-ebf049f3edb5&title=Check%20out%20my%20YoMobi%20mobile%20site.&url=<%= URI.encode @mobile_url %>"><%==t('account.welcome_email.share')%></a>
 <br />
 <br />
-<a href="http://www.yomobi.com/"><%==t('account.welcome_email.share')%></a>
+<a href="http://www.yomobi.com/"><%==t('account.welcome_email.access_account')%></a>
 <br />
 <br />
 <p>
