--- a/app/views/site_manager/upgrade.slim
+++ b/app/views/site_manager/upgrade.slim
@@ -4,5 +4,5 @@ h2 = "Paying #{@time} subscription for: #{@site.url_and_name}"
 
 erb:
   <script type="text/javascript">
-    WePay.iframe_checkout("checkout", "<%=raw @checkout.checkout_uri %>");
+    WePay.iframe_checkout("checkout", "<%=raw (@checkout.checkout_uri || @checkout.preapproval_uri) %>");
   </script>
