Fixed bug where upload button would not enable. Closes #248

--- a/app/views/builder/_templates.slim
+++ b/app/views/builder/_templates.slim
@@ -230,7 +230,7 @@ script.edit-settings(type="text/template")
             td
               input type="file" name="logo" accept="image/*"
             td
-              input.rfloat type="submit" value==t'builder.general_settings.upload' disabled="disabled"
+              input.rfloat type="submit" name="upload_submit" value==t'builder.general_settings.upload' disabled="disabled"
           tr
             td colspan="3"
               .divider
