--- a/app/views/signup/default/step-3.slim
+++ b/app/views/signup/default/step-3.slim
@@ -28,7 +28,7 @@
             = image_tag 'no-logo.png'
         td
           = file_field :step_data, :logo, :accept => "image/*"
-          input type="submit" value=t'account_setup.button.upload' disabled="disabled"
+          input type="submit" name="upload_submit" value=t'account_setup.button.upload' disabled="disabled"
           .load-box.rfloat.hide
             span.success =t'status.working'
             div.loader.rfloat style="margin:2px 4px 0 5px"
