--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -127,8 +127,7 @@ body {
 
 .signin-bg {
 	float: right;
-	min-height: 65px;
-	max-height: 75px;
+	height: 65px;
   	background: #ff9f02;
   	border-radius: 4px;
   	-moz-border-radius: 10px;
@@ -139,19 +138,16 @@ body {
 	margin-right: 30px;
 	margin-top: 21px;
 }
-.signin-section1 {
-	float:left;
-	/* width:130px; */
-	margin-top:2px;
-	margin-left:13px;
-	margin-right:8px;
+.signin-bg table {
+	border-collapse: collapse;
+	border-spacing: 0px;
 }
-
-.signin-section1 input { 
-	margin-left: 0px;
-	padding-left: 0px;
+.signin-bg td {
+	padding: 0px 6px;	
 }
-
+td.signin-text {
+	padding-top: 6px;
+}
 .signin-text {
 	font-size:12px;
 	/* text-transform:uppercase; */
@@ -173,28 +169,21 @@ body {
 	/* text-shadow:1px 1px 1px #d88202; */
 	/* color:#f0f0f2; */
 	color:#333;
-	float:left;
+}
+.remember {
 	margin-top:2px;
 }
 .floatleft {
 	float:left;
 }
 .checkbox {
-	padding:0px;
-	margin:0px;
-	margin-top:2px;
-	margin-right:3px;
-}
-.signin-section2 {
-	float:left;
-	margin-top:2px;
-	margin-left:5px;
+	margin: 1px 0px 0px -2px
 }
 .signin-button {
 	border: none;
 	float:left;
-	line-height:10px;
-	margin:18px 12px 0 10px;
+	line-height:12px;
+	margin: -1px 6px 0px 0px;
 }
 .menumain {
 	float:left;
