--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -9,27 +9,6 @@ body {
 	color:#000000;
 }
 
-.pretty-button {
-  background: #0290ee;
-  border-radius: 4px;
-  -moz-border-radius: 4px;
-  -webkit-border-radius: 4px;
-  box-shadow: 0 2px 3px rgba(0, 0, 0, 0.25), inset 0 1px 0 rgba(255, 255, 255, 0.3);
-  -moz-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.25), inset 0 1px 0 rgba(255, 255, 255, 0.3);
-  -webkit-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.25), inset 0 1px 0 rgba(255, 255, 255, 0.3);
-  color: white;
-  display: block;
-  float: left;
-  font-size: 16px;
-  line-height: 22px;
-  font-weight: normal;
-  padding: 6px 10px;
-  text-align: center;
-  text-decoration: none;
-  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
-  cursor: pointer; 
-}
-
 .passwordlink {
 	color:#f0f0f2;
 	text-decoration:none;
@@ -148,6 +127,9 @@ body {
 td.signin-text {
 	padding-top: 6px;
 }
+td.top {
+	vertical-align: top;
+}
 .signin-text {
 	font-size:12px;
 	/* text-transform:uppercase; */
@@ -171,7 +153,7 @@ td.signin-text {
 	color:#333;
 }
 .remember {
-	margin-top:2px;
+	margin-top:3px;
 }
 .floatleft {
 	float:left;
@@ -180,10 +162,26 @@ td.signin-text {
 	margin: 1px 0px 0px -2px
 }
 .signin-button {
+	background: #0290ee;
+	border-radius: 4px;
+	-moz-border-radius: 4px;
+	-webkit-border-radius: 4px;
+	box-shadow: 0 2px 3px rgba(0, 0, 0, 0.25), inset 0 1px 0 rgba(255, 255, 255, 0.3);
+	-moz-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.25), inset 0 1px 0 rgba(255, 255, 255, 0.3);
+	-webkit-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.25), inset 0 1px 0 rgba(255, 255, 255, 0.3);
+	color: white;
+	display: block;
+	float: left;
+	font-size: 16px;
+	line-height:12px;
+	font-weight: normal;
+	text-align: center;
+	text-decoration: none;
+	text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
+	cursor: pointer; 
 	border: none;
 	float:left;
-	line-height:12px;
-	margin: -1px 6px 0px 0px;
+	padding: 6px 10px;
 }
 .menumain {
 	float:left;
