Added advanced customization panel (work in progress).
Still need to do saving and file uploads

--- a/app/views/builder/_templates.slim
+++ b/app/views/builder/_templates.slim
@@ -293,6 +293,62 @@ script.edit-advanced-settings(type="text/template")
       .checkmark
       .loader
 
+
+script.customize(type="text/template")
+  .header.customize
+    .icon{ style="background-image: url(/images/customize.png)" }
+    .widget-name
+      =t'builder.customize.title'
+    p.help-text
+      a.help-link href="http://help.yomobi.com/Account/AdvancedCustomization" target="_blank" =t'builder.widget_editor.help'
+
+  .edit-area.customize
+    .explanation ==t'builder.customize.explanation'
+
+    select name="area_select"
+      option value="tab_bar" Mobile Tab Bar
+      option value="widget_icons" Widget Icons
+
+    .subpanels
+      .tab_bar
+        h3 Customizing Tab Bar
+        b Tab Bar Backgound Color
+        .color-picker data-color="{{ tab_bar_color }}" data-target="tab_bar_color"
+          div style="background-color:{{ tab_bar_color }}"
+        input type="hidden" name="tab_bar_color" value="{{ tab_bar_color }}"
+        br
+        b Tab Bar Text Color
+        .color-picker data-color="{{ tab_bar_text_color }}" data-target="tab_bar_text_color"
+          div style="background-color:{{ tab_bar_text_color }}"
+        input type="hidden" name="tab_bar_text_color" value="{{ tab_bar_text_color }}"
+
+      .widget_icons
+        h3 Customizing Widget Icons
+        b Icon Font
+        br
+        select name="icon_font_family"
+          option value="Arial, Helvetica, sans-serif" Arial
+          option value="Courier New, monospace" Courier New
+          option value="Georgia, serif" Georgia
+          option value="Times New Roman, Times, serif" Times New Roman
+          option value="Verdana, Geneva, sans-serif" Verdana
+        br
+        b Icon Text Color
+        .color-picker data-color="{{ icon_text_color }}" data-target="icon_text_color"
+          div style="background-color:{{ icon_text_color }}"
+        input type="hidden" name="icon_text_color" value="{{ icon_text_color }}"
+
+    br
+    .action-bar
+      p.error.lfloat style="margin-top:2px"
+      .accept-btn.main-btn
+        input.content type="submit" value=t'builder.widget_editor.save'
+      .cancel-btn.alt-btn
+        .content = t'builder.widget_editor.cancel'
+      .loader
+      .clearfix
+
+
 script.jeditor-image-dialog(type="text/template")
   #dialog-confirm.jeditor-image title=t'dialog.add_picture.title'
     | <% if (!_maybe.src) { %>
