--- a/app/views/shared/_sidebar.slim
+++ b/app/views/shared/_sidebar.slim
@@ -20,6 +20,10 @@ ul
     .icon
     a href=builder_main_path(:anchor => 'edit-tab-bar') =t 'builder.sidebar.edit_tab_bar'
   li.spacer
+  li.option.customize
+    .icon
+    a href=builder_main_path(:anchor => 'customize') =t 'builder.sidebar.customize'
+  li.spacer
   li.option.builder class=active?('builder',active)
     .icon
     a href=builder_main_path =t 'builder.sidebar.mobile_site_builder'
