Customization: save to database.

--- a/app/views/builder/_templates.slim
+++ b/app/views/builder/_templates.slim
@@ -309,7 +309,7 @@ script.customize(type="text/template")
       option value="tab_bar" Mobile Tab Bar
       option value="widget_icons" Widget Icons
 
-    .subpanels
+    form.subpanels
       .tab_bar
         h3 Customizing Tab Bar
         b Tab Bar Backgound Color
@@ -345,6 +345,7 @@ script.customize(type="text/template")
         input.content type="submit" value=t'builder.widget_editor.save'
       .cancel-btn.alt-btn
         .content = t'builder.widget_editor.cancel'
+      .checkmark
       .loader
       .clearfix
 
