--- a/app/views/shared/_mobile-render.slim
+++ b/app/views/shared/_mobile-render.slim
@@ -19,7 +19,9 @@
       .ad-bar.bottom
         div align="center"
         = render 'mobile/adsense' if Rails.env == 'production'
-    - unless @is_preview_mode
-      .mobile-footer
+    .mobile-footer
+      - unless @is_preview_mode
         = render 'mobile/social-share'
+      erb:
+        <div class="powered-by">Powered by <a href="http://www.yomobi.com" target="_blank">YoMobi</a></div>
 
